# qt-opencv-img-processing

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md
build-test/: CMakeCache.txt  Makefile  QtOpenCVStarter  cmake_install.cmake
build-test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-test/QtOpenCVStarter_autogen/: deps
build-test/QtOpenCVStarter_autogen/EWIEGA46WW/: moc_MainWindow.cpp.d
